--- a/uclibc.config
+++ b/uclibc.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Version: 0.9.33.2
-# Fri Aug 10 08:10:33 2012
+# Fri Aug 10 20:05:37 2012
 #
 # TARGET_alpha is not set
 # TARGET_arm is not set
@@ -49,10 +49,11 @@ ARCH_HAS_MMU=y
 ARCH_USE_MMU=y
 UCLIBC_HAS_FLOATS=y
 UCLIBC_HAS_FPU=y
-# DO_C99_MATH is not set
-# DO_XSI_MATH is not set
+DO_C99_MATH=y
+DO_XSI_MATH=y
 UCLIBC_HAS_FENV=y
-KERNEL_HEADERS="/opt/tools/$(TARGET_ARCH)-unknown-linux-uclibc/usr/include"
+UCLIBC_HAS_LONG_DOUBLE_MATH=y
+KERNEL_HEADERS="/opt/tools/x86_64-via-linux-uclibc/usr/include"
 HAVE_DOT_CONFIG=y
 
 #
@@ -66,7 +67,7 @@ LDSO_CACHE_SUPPORT=y
 LDSO_PRELOAD_ENV_SUPPORT=y
 # LDSO_PRELOAD_FILE_SUPPORT is not set
 LDSO_BASE_FILENAME="ld.so"
-# LDSO_STANDALONE_SUPPORT is not set
+LDSO_STANDALONE_SUPPORT=y
 # LDSO_PRELINK_SUPPORT is not set
 UCLIBC_STATIC_LDCONFIG=y
 LDSO_RUNPATH=y
@@ -90,9 +91,9 @@ MALLOC_STANDARD=y
 # MALLOC_GLIBC_COMPAT is not set
 UCLIBC_DYNAMIC_ATEXIT=y
 # COMPAT_ATEXIT is not set
-# UCLIBC_SUSV3_LEGACY is not set
-# UCLIBC_SUSV3_LEGACY_MACROS is not set
-# UCLIBC_SUSV4_LEGACY is not set
+UCLIBC_SUSV3_LEGACY=y
+UCLIBC_SUSV3_LEGACY_MACROS=y
+UCLIBC_SUSV4_LEGACY=y
 # UCLIBC_STRICT_HEADERS is not set
 # UCLIBC_HAS_STUBS is not set
 UCLIBC_HAS_SHADOW=y
@@ -134,14 +135,16 @@ UCLIBC_HAS_EPOLL=y
 UCLIBC_HAS_XATTR=y
 UCLIBC_HAS_PROFILING=y
 UCLIBC_HAS_CRYPT_IMPL=y
-# UCLIBC_HAS_SHA256_CRYPT_IMPL is not set
-# UCLIBC_HAS_SHA512_CRYPT_IMPL is not set
+UCLIBC_HAS_SHA256_CRYPT_IMPL=y
+UCLIBC_HAS_SHA512_CRYPT_IMPL=y
 UCLIBC_HAS_CRYPT=y
 UCLIBC_HAS_NETWORK_SUPPORT=y
 UCLIBC_HAS_SOCKET=y
 UCLIBC_HAS_IPV4=y
-# UCLIBC_HAS_IPV6 is not set
-# UCLIBC_HAS_RPC is not set
+UCLIBC_HAS_IPV6=y
+UCLIBC_HAS_RPC=y
+UCLIBC_HAS_FULL_RPC=y
+UCLIBC_HAS_REENTRANT_RPC=y
 # UCLIBC_USE_NETLINK is not set
 # UCLIBC_HAS_BSD_RES_CLOSE is not set
 UCLIBC_HAS_COMPAT_RES_STATE=y
@@ -160,11 +163,10 @@ UCLIBC_HAS_CTYPE_SIGNED=y
 UCLIBC_HAS_CTYPE_UNSAFE=y
 # UCLIBC_HAS_CTYPE_CHECKED is not set
 # UCLIBC_HAS_CTYPE_ENFORCED is not set
-# UCLIBC_HAS_WCHAR is not set
+UCLIBC_HAS_WCHAR=y
 # UCLIBC_HAS_LOCALE is not set
-# UCLIBC_HAS_HEXADECIMAL_FLOATS is not set
+UCLIBC_HAS_HEXADECIMAL_FLOATS=y
 # UCLIBC_HAS_GLIBC_CUSTOM_PRINTF is not set
-# USE_OLD_VFPRINTF is not set
 UCLIBC_PRINTF_SCANF_POSITIONAL_ARGS=9
 # UCLIBC_HAS_SCANF_GLIBC_A_FLAG is not set
 # UCLIBC_HAS_STDIO_BUFSIZ_NONE is not set
@@ -201,20 +203,21 @@ UCLIBC_HAS_REGEX=y
 UCLIBC_HAS_REGEX_OLD=y
 UCLIBC_HAS_FNMATCH=y
 UCLIBC_HAS_FNMATCH_OLD=y
-# UCLIBC_HAS_WORDEXP is not set
-# UCLIBC_HAS_NFTW is not set
-# UCLIBC_HAS_FTS is not set
+UCLIBC_HAS_WORDEXP=y
+UCLIBC_HAS_NFTW=y
+# UCLIBC_HAS_FTW is not set
+UCLIBC_HAS_FTS=y
 UCLIBC_HAS_GLOB=y
-# UCLIBC_HAS_GNU_GLOB is not set
-# UCLIBC_HAS_UTMPX is not set
+UCLIBC_HAS_GNU_GLOB=y
+UCLIBC_HAS_UTMPX=y
 
 #
 # Library Installation Options
 #
-RUNTIME_PREFIX="/opt/tools/$(TARGET_ARCH)-unknown-linux-uclibc"
-DEVEL_PREFIX="/opt/tools/$(TARGET_ARCH)-unknown-linux-uclibc/usr/"
+RUNTIME_PREFIX="/opt/tools/x86_64-via-linux-uclibc"
+DEVEL_PREFIX="/opt/tools/x86_64-via-linux-uclibc/usr"
 MULTILIB_DIR="lib"
-HARDWIRED_ABSPATH=y
+# HARDWIRED_ABSPATH is not set
 
 #
 # Security options
@@ -228,12 +231,12 @@ UCLIBC_BUILD_NOEXECSTACK=y
 #
 # Development/debugging options
 #
-CROSS_COMPILER_PREFIX=""
+CROSS_COMPILER_PREFIX="x86_64-via-linux-uclibc-"
 UCLIBC_EXTRA_CFLAGS=""
 # DODEBUG is not set
 DOSTRIP=y
 # DOASSERTS is not set
-# SUPPORT_LD_DEBUG is not set
+SUPPORT_LD_DEBUG=y
 # SUPPORT_LD_DEBUG_EARLY is not set
 # UCLIBC_MALLOC_DEBUGGING is not set
 # UCLIBC_HAS_BACKTRACE is not set
