uclibc: dont hardcode host truple

--- a/uclibc.config
+++ b/uclibc.config
@@ -53,7 +53,7 @@ DO_C99_MATH=y
 DO_XSI_MATH=y
 UCLIBC_HAS_FENV=y
 UCLIBC_HAS_LONG_DOUBLE_MATH=y
-KERNEL_HEADERS="/opt/tools/x86_64-via-linux-uclibc/usr/include"
+KERNEL_HEADERS="/opt/tools/XTARGETX/usr/include"
 HAVE_DOT_CONFIG=y
 
 #
@@ -214,8 +214,8 @@ UCLIBC_HAS_UTMPX=y
 #
 # Library Installation Options
 #
-RUNTIME_PREFIX="/opt/tools/x86_64-via-linux-uclibc"
-DEVEL_PREFIX="/opt/tools/x86_64-via-linux-uclibc/usr"
+RUNTIME_PREFIX="/opt/tools/XTARGETX"
+DEVEL_PREFIX="/opt/tools/XTARGETX/usr"
 MULTILIB_DIR="lib"
 # HARDWIRED_ABSPATH is not set
 
@@ -231,7 +231,7 @@ UCLIBC_BUILD_NOEXECSTACK=y
 #
 # Development/debugging options
 #
-CROSS_COMPILER_PREFIX="x86_64-via-linux-uclibc-"
+CROSS_COMPILER_PREFIX="XTARGETX-"
 UCLIBC_EXTRA_CFLAGS=""
 # DODEBUG is not set
 DOSTRIP=y
