arm: gnueabi , -muclibc at build time

--- a/uclibc-arm.config
+++ b/uclibc-arm.config
@@ -54,7 +54,7 @@ UCLIBC_HAS_FPU=y
 DO_C99_MATH=y
 DO_XSI_MATH=y
 UCLIBC_HAS_FENV=y
-KERNEL_HEADERS="/opt/tools/armv7l-via-linux-uclibc/usr/include"
+KERNEL_HEADERS="/opt/tools/XTARGETX/usr/include"
 HAVE_DOT_CONFIG=y
 
 #
@@ -215,8 +215,8 @@ UCLIBC_HAS_UTMPX=y
 #
 # Library Installation Options
 #
-RUNTIME_PREFIX="/opt/tools/armv7l-via-linux-uclibc"
-DEVEL_PREFIX="/opt/tools/armv7l-via-linux-uclibc/usr"
+RUNTIME_PREFIX="/opt/tools/XTARGETX"
+DEVEL_PREFIX="/opt/tools/XTARGETX/usr"
 MULTILIB_DIR="lib"
 # HARDWIRED_ABSPATH is not set
 
@@ -233,7 +233,7 @@ UCLIBC_BUILD_NOEXECSTACK=y
 #
 # Development/debugging options
 #
-CROSS_COMPILER_PREFIX="armv7l-via-linux-uclibc-"
+CROSS_COMPILER_PREFIX="XTARGETX-"
 UCLIBC_EXTRA_CFLAGS=""
 # DODEBUG is not set
 DOSTRIP=y
