remove via components, use bind mount for $HOME

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM scratch
+FROM busybox
 ENV USER mrosset
 ENV HOME /home/$USER
 ENV GOPATH $HOME/gocode
@@ -6,10 +6,7 @@ ENV PATH $GOPATH/bin:$HOME/tools/bin:/bin
 SHELL ["/home/mrosset/tools/bin/bash", "-c"]
 COPY etc /etc
 COPY bin /bin
-COPY root/home /home
-RUN chown $USER.$USER $HOME
-RUN chown $USER.$USER $HOME/tools
-USER mrosset:root
+USER mrosset
 VOLUME $HOME/.cache
 CMD ["/home/mrosset/tools/bin/bash"]
 WORKDIR /home/$USER
